Fixed scrollbar for Chrome 121+

--- a/src/App/Content/Content.module.sass
+++ b/src/App/Content/Content.module.sass
@@ -8,8 +8,6 @@
   overflow-x: hidden
   overflow-y: scroll
 
-  scrollbar-color: $scrollbar-thumb-color $main-light-color
-
   &::-webkit-scrollbar
     width: 7px
 
